# pointcloud_registration

./: CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  package.xml
include/pointcloud_registration/: pointcloud_registration_point_types.h  spin_image_estimation.h
include/pointcloud_registration/icp/: icp_correspondences_check.h  registration_correspondences_check.h  registration_correspondences_check.hpp
src/: autonomous_exploration.cpp  pointcloud_registration_node.cpp  pointcloud_registration_nodelet.cpp
